Bug 146407 - Writer - Dysfunction of Diagonal & Criss-Cross Border.
Summary: Writer - Dysfunction of Diagonal & Criss-Cross Border.
Status: RESOLVED FIXED
Alias: None
Product: LibreOffice
Classification: Unclassified
Component: Writer (show other bugs)
Version:
(earliest affected)
7.3.0.0 beta1+
Hardware: x86-64 (AMD64) All
: medium normal
Assignee: Bayram Çiçek
URL:
Whiteboard: target:7.4.0
Keywords:
Depends on:
Blocks: Toolbar-Border-Controls
  Show dependency treegraph
 
Reported: 2021-12-24 16:11 UTC by JO3EMC
Modified: 2022-01-31 19:03 UTC (History)
4 users (show)

See Also:
Crash report or crash signature:
Regression By:


Attachments

Note You need to log in before you can comment on or make changes to this bug.
Description JO3EMC 2021-12-24 16:11:32 UTC
Description:
Toolbar icons about Diagonal & Criss-Cross Border seem not to work.

Steps to Reproduce:
1. Make table in Writer.
2. Select some cells.
3. Select "Borders" icon in "Table" toolbar.
4. Select icon of "Diagonal Down Border" or "Diagonal Up Border" or "Criss-Cross Border".

Actual Results:
Nothing happens.

Expected Results:
Diagonal lines expected to be drawn.


Reproducible: Always


User Profile Reset: Yes



Additional Info:
Version: 7.3.0.0.beta1 (x64) / LibreOffice Community
Build ID: 436f14c25ec1847646b953cf13d0db4f7ca3be57
CPU threads: 8; OS: Windows 10.0 Build 19042; UI render: Skia/Vulkan; VCL: win
Locale: ja-JP (ja_JP); UI: ja-JP
Calc: CL

Version: 7.3.0.0.beta1+ (x64) / LibreOffice Community
Build ID: c25067e46d7d849a584295de365e32c6c7af11bf
CPU threads: 8; OS: Windows 10.0 Build 19042; UI render: Skia/Vulkan; VCL: win
Locale: ja-JP (ja_JP); UI: ja-JP
Calc: CL
Comment 1 raal 2021-12-25 17:55:38 UTC
I can confirm with Version: 7.4.0.0.alpha0+ / LibreOffice Community
Build ID: c13db6e792cc347ffff4585f23866f195651f21f
CPU threads: 4; OS: Linux 5.11; UI render: default; VCL: gtk3
Locale: cs-CZ (cs_CZ.UTF-8); UI: en-US
Calc: threaded Jumbo

Looks like unfinished feature: https://gerrit.libreoffice.org/c/core/+/120262
Comment 2 Bayram Çiçek 2021-12-26 17:29:06 UTC
(In reply to raal from comment #1)

> Looks like unfinished feature: https://gerrit.libreoffice.org/c/core/+/120262

That's right.

I didn't assign it to myself due to the difficulty of implementing the feature. Working on it by myself, don't know how much time it will take. Anyone is welcome to contribute on https://gerrit.libreoffice.org/c/core/+/120262
Comment 3 JO3EMC 2021-12-27 14:02:33 UTC
Hmm…
Users may be confused if the UI is implemented even though the functionality has not been implemented yet.
Shouldn't the UI be implemented when the functionality has been implemented?
Comment 4 Bayram Çiçek 2021-12-27 16:57:52 UTC
(In reply to JO3EMC from comment #3)
> Hmm…
> Users may be confused if the UI is implemented even though the functionality
> has not been implemented yet.
Definitely.


> Shouldn't the UI be implemented when the functionality has been implemented?
The problem is Calc and Writer use the same 'Borders' UI (svx/source/tbxctrls/tbcontrl.cxx, see https://gerrit.libreoffice.org/c/core/+/118951).
Therefore, any change will be made on 'Borders' tab, will affect both Calc and Writer UI.

In my opinion, (since diagonal borders work well on Calc, but doesn't work on Writer), it should be possible to hide diagonal border icons on 'Borders' UI just for Writer (until the feature is implemented).

I have to look at the code-base first. If it's possible to hide them, then I'll send a patch for this.
Thanks!.
Comment 5 Commit Notification 2022-01-25 14:08:25 UTC
Bayram Çiçek committed a patch related to this issue.
It has been pushed to "master":

https://git.libreoffice.org/core/commit/adbaec38eca4847915871c817b67f5c722f0997d

tdf#146407: Hide diagonal border icons for Writer

It will be available in 7.4.0.

The patch should be included in the daily builds available at
https://dev-builds.libreoffice.org/daily/ in the next 24-48 hours. More
information about daily builds can be found at:
https://wiki.documentfoundation.org/Testing_Daily_Builds

Affected users are encouraged to test the fix and report feedback.
Comment 6 JO3EMC 2022-01-27 09:00:09 UTC
Confirmed with 7.4.0.0a0.

Version: 7.4.0.0.alpha0+ (x64) / LibreOffice Community
Build ID: eb69767d7c1bb8e6e780fd9503f08c9d7f5ecb45
CPU threads: 8; OS: Windows 10.0 Build 19042; UI render: Skia/Raster; VCL: win
Locale: ja-JP (ja_JP); UI: ja-JP
Calc: CL
Comment 7 JO3EMC 2022-01-30 19:16:36 UTC
Will it be reflected in 7.3?
Comment 8 Bayram Çiçek 2022-01-30 20:57:06 UTC
(In reply to JO3EMC from comment #7)
> Will it be reflected in 7.3?

According to the commit notification above (comment #5), it will be available in 7.4.0. So, it wouldn't be reflected in 7.3.
Comment 9 JO3EMC 2022-01-31 02:15:20 UTC
Oh, it could be a treatment in the distant future, isn't it...
Comment 10 Bayram Çiçek 2022-01-31 19:03:39 UTC
(In reply to JO3EMC from comment #9)
> Oh, it could be a treatment in the distant future, isn't it...

maybe.

diagonal borders feature was started to implementing in 2000 until 2004. (don't know why developers had stopped the development). I also think that this feature is one of the most-needed feature in LibreOffice. Let's see what happens in the future :)