tdf#146407: Hide diagonal border icons for Writer

- Writer and Calc use the same 'Borders' UI.
  - svx/source/tbxctrls/tbcontrl.cxx

- Diagonal borders for Writer has not been implemented yet.
  Therefore, diagonal borders don't work when clicking on them.

- It would be convenient to hide diagonal border
  icons until the functionality is implemented.

Change-Id: I6601ef924dbfb0acd40c3144300fecf74922c49f
Reviewed-on: https://gerrit.libreoffice.org/c/core/+/128487
Tested-by: Jenkins
Tested-by: Heiko Tietze <heiko.tietze@documentfoundation.org>
Reviewed-by: Heiko Tietze <heiko.tietze@documentfoundation.org>